[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://obstacles/Obstacle.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.92549, 0.792157, 0.0862745, 1 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.374538 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.696627, 0.717434, 0, -0.717434, 0.696627, 0, 18.9283, 35.342 )
shadow_enabled = true
shadow_bias = 0.75
shadow_reverse_cull_face = true

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -4.146, 0.8, 9.405 )

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.877389, 0.479779, 0, -0.479779, 0.877389, 0.156916, 0.0805664, 10.0639 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 0.997648, 0.0685374, 0, -0.0685374, 0.997648, 0, 8.03399, 19 )
projection = 1
current = true
size = 19.0

[node name="Cylinders" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.88871 )

[node name="MeshInstance" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 1, -29.5808 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.7006, 1, -29.8638 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance5" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -29.864 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 1, 9.55826 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.7006, 1, 9.27521 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="SpawnPoints" type="Spatial" parent="."]

[node name="LeftPoint" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.49021, 0.765331, -21.139 )

[node name="Obstacle" parent="SpawnPoints/LeftPoint" instance=ExtResource( 3 )]

[node name="RightPoint" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.74732, 0.765331, -21.139 )

[node name="Obstacle" parent="SpawnPoints/RightPoint" instance=ExtResource( 3 )]

[connection signal="move" from="Player" to="." method="_on_Player_move"]
